# ghost-mate

./: .coverage  .env.example  .gitignore  FIX_NOTES.md  OPTIMIZATIONS.md  README.md  README_FIX.md  fix_ghost_mate_all.py  pyproject.toml
autonomous_corexy_chess_robot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: architecture.md  calibration.md  modes.md  protocol.md  safety.md
firmware/esp32/: platformio.ini
firmware/esp32/include/: config.hpp  corexy.hpp  hall_scan.hpp  z_axis.hpp
firmware/esp32/src/: corexy.cpp  endstops.cpp  hall_scan.cpp  main.cpp  protocol.cpp  z_axis.cpp
firmware/teensy40/: platformio.ini
firmware/teensy40/include/: config.hpp  corexy.hpp  hall_scan.hpp  protocol.hpp  safety.hpp  z_axis.hpp
firmware/teensy40/src/: corexy.cpp  hall_scan.cpp  main.cpp  protocol.cpp  safety.cpp  z_axis.cpp
host/app/: config.py  main.py
host/app/ai/: __init__.py  coach.py
host/app/api/: routes.py  ws.before_async_subscribe_fix.py  ws.before_eval_annotations.py  (+2 more)
host/tests/: conftest.py  pytest.ini  test_api_comprehensive.py  test_board_sensor.py  test_chess_edge_cases_api.py  test_coach_deep.py  test_config_and_concurrency.py  test_full_stack_api.py  test_game_state.py  test_game_state_invariants.py  test_hardware_and_domain.py  test_live_engine_and_coach.py  test_live_engine_deep.py  test_motion_and_pathfinding.py  test_move_history_and_pgn.py  test_new_endpoints_negative.py  test_pgn_and_games.py  test_pgn_replay_and_results.py  test_reconciler.py  test_reconciler_comprehensive.py  test_rules.py  test_sensor_delta_reconciler.py  test_stress_and_integration.py  test_ui_assets_and_source_hygiene.py
scripts/: dev_host.ps1  dev_host.sh  fix_clean_pieces_lines.py  flash_firmware.sh  patch_dynamic_stockfish_v3.py  patch_engine_dynamic_fen_pgn.py  patch_eval_annotations.py  patch_stockfish_analysis.py  record_calibration.py  replay_pgn.py  run_host_pi.sh  smoke_check.py  software_ready_check.py
(+45 files in other folders)
