[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-corexy-chess-robot"
version = "0.1.0"
description = "Host software for an autonomous CoreXY chess robot"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-chess>=1.999",
    "pyserial>=3.5",
    "pyserial-asyncio>=0.6",
    "sqlmodel>=0.0.16",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "jinja2>=3.1",
    "aiohttp>=3.9",
    "berserk>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["host*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["host/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
